--- a/BaekJoon/2805. 나무 자르기.md
+++ b/BaekJoon/2805. 나무 자르기.md
@@ -58,6 +58,6 @@ public class Main {
 
 ### 이분 탐색
 
-결정 문제(답이 이분적으로 도출되는 문제)의 답이 True에서 False 혹은 False에서 True로 바뀌는 구간 찾을 때 사용하는 탐색 기법
+결정 문제(답이 이분적으로 도출되는 문제)의 답이 True에서 False 혹은 False에서 True로 바뀌는 구간을 찾을 때 사용하는 탐색 기법
 
 ex) F F F F F F T T T T T T T 에서 F T 구간
