--- a/BaekJoon/이분 탐색/1477. 휴게소 세우기.md
+++ b/BaekJoon/이분 탐색/1477. 휴게소 세우기.md
@@ -61,9 +61,9 @@ A 구간의 길이로 만들어지는 구간의 개수 > 주어진 조건 (false
 
 A 구간의 길이로 만들어지는 구간의 개수 <= 주어진 조건 (true)
 
----
+# 나눗셈 나머지 처리 Tip
 
-## 나머지가 있을 때 몫 + 1
+### 나머지가 있을 때 몫 + 1
 
 5 / 3 = 1 ... 2 → (5 + 2) / 3 = 2
 
@@ -71,7 +71,7 @@ A 구간의 길이로 만들어지는 구간의 개수 <= 주어진 조건 (true
 
 나누는 수에 (나눌 수 - 1)을 더하여 나머지가 있을 때 몫에 나머지 존재 여부가 포함되도록 만들 수 있다.
 
-## 나머지가 0인 경우 몫 - 1
+### 나머지가 0인 경우 몫 - 1
 
 300 / 300 = 1 → (300 - 1) / 300 = 0
 
