Update ⭐️⭐️⭐️⭐️ 십자카드 문제.md

--- a/BaekJoon/구현/⭐️⭐️⭐️⭐️ 십자카드 문제.md
+++ b/BaekJoon/구현/⭐️⭐️⭐️⭐️ 십자카드 문제.md
@@ -1,4 +1,5 @@
-# ⭐️⭐️⭐️⭐️ [십자카드 문제](https://www.acmicpc.net/problem/2659)
+# ⭐️⭐️⭐️⭐️ 십자카드 문제
+https://www.acmicpc.net/problem/2659
 
 ```java
 import java.io.BufferedReader;
